updated .gitignore th skip .bak files, updated ./task3/Dockerfile, added .env

--- a/task3/sandbox2021/Dockerfile
+++ b/task3/sandbox2021/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:alpine
 COPY . /usr/share/nginx/html
-ENV DEVOPS='Ihor Ko'
+#ENV DEVOPS='Ihor Ko'
 RUN ash -c 'echo -e "<br>ENV Variable DEVOPS=$DEVOPS<br>" >> /usr/share/nginx/html/index.html'
