--- a/task4/nginx-install.yaml
+++ b/task4/nginx-install.yaml
@@ -2,16 +2,17 @@
 - hosts: web
   remote_user: ubuntu
   tasks:
-    - name: create dir for nginx
+  - name: create dir for nginx
     file:
-    path: /opt/nginx/www
-    state: directory
-    - name: install nginx latest version
-     apt:
-     name: nginx
-     state: latest
-    - name: start nginx
-     services:
-     name: nginx
-     state: started
+      path: /opt/nginx/www
+      state: directory
+      mode: '0755'
+  - name: install nginx latest version
+    apt:
+      name: nginx
+      state: latest
+  - name: start nginx
+    service:
+      name: nginx
+      state: started
 
